--- a/_posts/2019-12-18-the-us-narrative-today.html
+++ b/_posts/2019-12-18-the-us-narrative-today.html
@@ -1645,5 +1645,109 @@ stories:
   state: Florida
   domain: http://www.miamitodaynews.com/
   link: https://www.miamitodaynews.com/2019/12/17/atlantic-sapphire-building-largest-aquaculture-facility-in-world/
+images:
+- name: docks-docks-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-atari-missle.jpg
+- name: gypsymosaic-gypsy-eyes-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: aws-s3-square-containership-dark-dali-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-containership-dark-dali-square.jpg
+- name: christianity-christianity-under-construction-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sand-paper.jpg
+- name: oldhouse-oldhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-creativity.jpg
+- name: gears-4882162452-fa3126b38d-b-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-green-zuma.jpg
+- name: art-museum-art-museum-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crafty-painting.jpg
+- name: border-crossing-bordercrossing-oily-mcoilface.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-oily-mcoilface.png
+- name: berlinwall-DSC-0084-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alberto-giacometti.jpg
+- name: nazi-invasion-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-station-cloud.jpg
+- name: oldhotel-oldhotel-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-smoking-cigarette.jpg
+- name: curtain-curtain-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-smoking-cigarette.jpg
+- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
+- name: stalin-time-rocking-chair-on-porch_36332220150_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-rocking-chair-on-porch_36332220150_o.jpg
+- name: server-cloud-server-racks-door-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-ww2-dresden.jpg
+- name: paris-paris-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sunday.jpg
+- name: stalin-time-desktop-laptop-chair.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-desktop-laptop-chair.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
+- name: old-church-oldchurch-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-creativity.jpg
+- name: bf-skinner-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-and-cars_36680898846_o.jpg
+- name: flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-pond.jpg
+- name: flower-barbed-wire-flower-barbed-wire-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-far-away.jpg
+- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
+- name: server-cloud-server-racks-door-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
+- name: file-00-00-18-35 3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35
+    3.jpg
+- name: oldsmallboat-oldsmallboat-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-rain.jpg
+- name: birdhouse-birdhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-cinnamon-rolls.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: castle-wall-DSC-0067-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-soul.JPG
+- name: 35562068104_fa20c57575-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
+- name: gypsy-wagon-gypsywagon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: crow_satan_red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_satan_red.jpg
+- name: wind-mills-windmills-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
+- name: blossombar-space-pizza-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-24-99.jpg
+- name: powerlines-power-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
+- name: store-on-corner-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-dresden.jpg
+- name: oldsmallboat-oldsmallboat-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-pablo-blue.jpg
+- name: art-museum-art-museum-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
+- name: legal-statue-legalstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
+- name: stalin-time-san-francisco-from-salesforce-west.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-from-salesforce-west.jpg
+- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
+- name: gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-umberto-bocc.jpg
+- name: liberty-back-statue-liberty-back-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colored-circuits.jpg
+- name: berlinwall-DSC-0084-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-cinnamon-rolls.jpg
+- name: fence-fence-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colorful-blocks.jpg
+- name: server-cloud-server-racks-clouds-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
+- name: nyc-flag-nycflag-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
+- name: copper-circuit-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-adam-smith-edinburgh.jpg
+- name: bf-skinner-street-car-san-francisco.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-street-car-san-francisco.jpg
 ---
 Hear Adam Schiff's Full Remarks On Articles Of Impeachment.&nbsp;Shop With A Cop.&nbsp;RHODs LeeAnne Locken Calls Fellow Cast Member The Little Chirpy Mexican.&nbsp;Prioritize Your Health In The New Year.&nbsp;Defiant Trump Rallies Supporters As House Impeaches Him.&nbsp;Groups Working On Alternative Plans For Marlboro College.&nbsp;Great Season, Great Fans.&nbsp;Twin Metals Minnesota Files Formal Mine Plan With Regulators.&nbsp;
